[gd_scene load_steps=32 format=2]

[ext_resource path="res://Minigame.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Player/Player_u2.png" type="Texture" id=3]
[ext_resource path="res://assets/Containers/Conveyor3.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/Player_u1.png" type="Texture" id=5]
[ext_resource path="res://assets/Player/Player_u0.png" type="Texture" id=6]
[ext_resource path="res://assets/Player/Player_l2.png" type="Texture" id=7]
[ext_resource path="res://assets/Player/Player_r1.png" type="Texture" id=8]
[ext_resource path="res://assets/Player/Player_r2.png" type="Texture" id=9]
[ext_resource path="res://assets/Player/Player_r0.png" type="Texture" id=10]
[ext_resource path="res://assets/Player/Player_d0.png" type="Texture" id=11]
[ext_resource path="res://assets/Player/Player_d2.png" type="Texture" id=12]
[ext_resource path="res://assets/Player/Player_l1.png" type="Texture" id=13]
[ext_resource path="res://assets/Player/Player_l0.png" type="Texture" id=14]
[ext_resource path="res://assets/Player/Player_d1.png" type="Texture" id=15]
[ext_resource path="res://assets/Containers/Plastic_Cont.png" type="Texture" id=16]
[ext_resource path="res://assets/Containers/E-waste_Cont.png" type="Texture" id=17]
[ext_resource path="res://assets/Containers/Paper_Cont.png" type="Texture" id=18]
[ext_resource path="res://assets/Containers/Organic_Cont.png" type="Texture" id=19]
[ext_resource path="res://assets/Containers/Glass_Cont.png" type="Texture" id=20]
[ext_resource path="res://assets/Items/None.png" type="Texture" id=21]
[ext_resource path="res://assets/Containers/Conveyor2.png" type="Texture" id=22]
[ext_resource path="res://assets/Containers/Conveyor4.png" type="Texture" id=23]
[ext_resource path="res://assets/Containers/Conveyor1.png" type="Texture" id=24]
[ext_resource path="res://assets/Backgrounds/Background1.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 7 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "s_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "s_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "s_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 15 ), ExtResource( 12 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "s_up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.3815, 29.1329 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.3815, 29.133 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 4 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": false,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 53.7883, 15.6337 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.7555, 30.9638 )

[node name="Minigame" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1.44167, 1.44167 )
texture = ExtResource( 25 )

[node name="Player" type="KinematicBody2D" parent="Background"]
position = Vector2( -29.8267, 109.595 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Background/Player"]
position = Vector2( 10, 10 )
scale = Vector2( 1.31007, 1.32777 )
z_index = 2
frames = SubResource( 4 )
animation = "s_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Player"]
position = Vector2( 10, 10 )
z_index = 2
shape = SubResource( 1 )

[node name="body" type="Area2D" parent="Background/Player"]
position = Vector2( 10, 10 )

[node name="Sprite" type="Sprite" parent="Background/Player/body"]
position = Vector2( 0, 15 )
scale = Vector2( 0.0846182, 0.0846182 )
z_index = 3
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Player/body"]
scale = Vector2( 0.999999, 1 )
z_index = 2
shape = SubResource( 2 )

[node name="Conveyor" type="Area2D" parent="Background"]
position = Vector2( -465.434, -4.57764e-05 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Background/Conveyor"]
position = Vector2( 164.692, 139.075 )
scale = Vector2( 0.7, 0.7 )
z_index = 1
frames = SubResource( 5 )
animation = "off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Conveyor"]
position = Vector2( 164.314, 139.395 )
shape = SubResource( 6 )

[node name="Item0" type="Sprite" parent="Background/Conveyor"]
position = Vector2( 190, 120 )
scale = Vector2( 0.1, 0.1 )
z_index = 1
texture = ExtResource( 21 )

[node name="Item1" type="Sprite" parent="Background/Conveyor"]
position = Vector2( 160, 120 )
scale = Vector2( 0.1, 0.1 )
z_index = 1
texture = ExtResource( 21 )

[node name="Item2" type="Sprite" parent="Background/Conveyor"]
position = Vector2( 130, 120 )
scale = Vector2( 0.1, 0.1 )
z_index = 1
texture = ExtResource( 21 )

[node name="Label" type="Label" parent="Background/Conveyor"]
margin_left = 138.0
margin_top = 86.0
margin_right = 260.0
margin_bottom = 103.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paper" type="Area2D" parent="Background"]
position = Vector2( -363.767, 42.659 )

[node name="Sprite" type="Sprite" parent="Background/Paper"]
position = Vector2( 266.601, -0.398637 )
scale = Vector2( 0.3, 0.3 )
z_index = 1
texture = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Paper"]
position = Vector2( 266.358, 1.63741 )
z_index = 1
shape = SubResource( 3 )

[node name="Plastic" type="Area2D" parent="Background"]
position = Vector2( -293.015, 35.7226 )

[node name="Sprite" type="Sprite" parent="Background/Plastic"]
position = Vector2( 273.687, 6.68745 )
scale = Vector2( 0.3, 0.3 )
z_index = 1
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Plastic"]
position = Vector2( 273.988, 8.32371 )
z_index = 1
shape = SubResource( 3 )

[node name="Glass" type="Area2D" parent="Background"]
position = Vector2( -177.177, 62.0809 )

[node name="Sprite" type="Sprite" parent="Background/Glass"]
position = Vector2( 273.988, 5.54913 )
scale = Vector2( 0.3, 0.3 )
z_index = 1
texture = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Glass"]
position = Vector2( 274.06, 6.34372 )
z_index = 1
shape = SubResource( 3 )

[node name="Organic" type="Area2D" parent="Background"]
position = Vector2( -68.6706, 58.9595 )

[node name="Sprite" type="Sprite" parent="Background/Organic"]
position = Vector2( 273.295, 6.2428 )
scale = Vector2( 0.3, 0.3 )
z_index = 1
texture = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Organic"]
position = Vector2( 273.469, 7.68745 )
z_index = 1
shape = SubResource( 3 )

[node name="E-waste" type="Area2D" parent="Background"]
position = Vector2( 39.5376, 50.6358 )

[node name="Sprite" type="Sprite" parent="Background/E-waste"]
position = Vector2( 274.682, 7.63007 )
scale = Vector2( 0.3, 0.3 )
z_index = 1
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/E-waste"]
position = Vector2( 274.687, 8.68745 )
z_index = 1
shape = SubResource( 3 )

[node name="TileMap" type="TileMap" parent="Background"]
position = Vector2( 1, 0 )
cell_size = Vector2( 48, 48 )
format = 1

[node name="Timer1" type="Timer" parent="Background"]
autostart = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
z_index = 2

[node name="Panel" type="Panel" parent="StaticBody2D"]
margin_left = 192.0
margin_top = 64.0
margin_right = 832.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Background/Timer1" to="." method="_on_Timer1_timeout"]
